# gtk_project

./: .gui.h.swp  .tab2.h.swp  123.db  Makefile  Makefile.am  Makefile.in  README  base.db  config.status  configure  configure.ac  configure.in  ex.c  gui.c  gui.h  main.c  tab1.c  tab1.h  tab2.c  tab2.h  tab3.c  tab3.h  table.c  table.h
.deps/: gui.Po  main.Po  tab1.Po  tab2.Po
autom4te.cache/: output.1  requests  traces.0  traces.1
bundle/: 123.db  base.db
